--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Git</title>
+<title>Git y Github</title>
 </head>
 
 <body>
-	<h1>Hola como estas</h1>
+	<div class="container">
+		<h2>Fernando Salinas</h2>
+	</div>
 </body>
 </html>
