--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
 </head>
 
 <body>
+	<header>
+		<h1>Header</h1>
+	</header>
 	<div class="container">
 		<h2>Fernando Salinas</h2>
 	</div>
+	
+	
 </body>
 </html>
